--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
   "version": "1.0.0",
   "description": "A digital bridge connecting families, healing trauma, and restoring identity in Rwanda",
   "private": true,
-  "homepage": "https://your-vercel-url.vercel.app",
+  "homepage": "https://mbona-platform.vercel.app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.14",
+    "framer-motion": "^10.12.4",
+    "lucide-react": "^0.263.1",
+    "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "lucide-react": "^0.263.1",
-    "framer-motion": "^10.12.4",
+    "react-scripts": "^5.0.1",
     "tailwindcss": "^3.3.0",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
